# MapExploreSimSys

./: .gitignore  .gitmodules
Backend/: CMakeLists.txt  build.sh  init.sh  install_dep.sh
Backend/Base/: Board.h  C2Component.cpp  C2Component.h  Component.cpp  ProjectConfig.h  config.h  db.cpp  db.h  fwd.h  navigator_plugin_utils.cpp  navigator_plugin_utils.h  run_component.h  utils.cpp  utils.h
Backend/Components/: CMakeLists.txt  Car.cpp  Controller.cpp  Navigator.cpp  View.cpp
Backend/Components/NaviPlugin/: CMakeLists.txt  a_star.cpp  bfs.cpp  demo.cpp  dfs.cpp
Backend/Server/SimulationServer/: CMakeLists.txt  frontend_config.h  simulation_server.cpp
Backend/Server/UserServer/: MessUsers.sqlite3  README  go.mod  go.sum  main.go
Backend/Server/UserServer/db/: conn.go  user.go
Backend/Server/UserServer/merr/: mess_err.go
Backend/Server/UserServer/middleware/: jwt.go
Backend/Server/UserServer/model/: user.go
Backend/Server/UserServer/utils/: response.go
Backend/Server/UserServer/utils/jwt/: jwt.go
Backend/Template/: config.template.json
Backend/Tests/: CMakeLists.txt  demo_launch_controller.cpp  test_for_test.cpp  test_gen_config_json.cpp  test_jwt-cpp.cpp  test_plugin_utils.cpp
Backend/Tests/assets/: simple-config.json
Frontend/MapDesigner/: MapDesigner.cpp  MapDesigner.h  MapDesigner.ui  main.cpp
Frontend/MapExploreSimSys/: MapExploreSimSys.pro
Frontend/MapExploreSimSys/Demos/: Demos.pro
Frontend/MapExploreSimSys/MESSMain/: MESSMain.pro  MESSWindow.cpp  MESSWindow.h  MESSWindow.ui  ServerConfig.h  main.cpp  main.cpp.autosave  server_config.h
Frontend/MapExploreSimSys/MESSWidgets/: BaseDisplayWidget.cpp  BaseDisplayWidget.h  ExperimentConfigWidget.cpp  ExperimentConfigWidget.h  ExperimentConfigWidget.ui  ExperimentDemandWidget.cpp  JsonModel.h  (+43 more)
(+15 files in other folders)
